src/tests/errors/staticanalysis/naming/main_wrong_type_fail.cmp
program main_wrong_type_fail
begin

	proc main() : int /* Fail: Return type for main. */
	begin
	    return 0
	end
end